# generate_model

./: Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
