[package]
name = "this_returns"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["macro", "types", "model_generation", "json"]
categories = ["development-tools", "json-export", "struct-generation"]
exclude = [".*", "tests/"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.29"
quote = "1.0.33"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
fake = { version = "2.8", features = ["derive"] }
