[package]
name = "generate_model"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["macro", "types", "model_generation", "json"]
categories = ["development-tools", "json-export", "struct-generation"]
exclude = [".*", "tests/"]
description = "Rust macro used for generating JSON objects from structs and writing them to a directory at compile time. This is so that you can easily generate types for APIs."

[lib]
proc-macro = true

[dependencies]
syn = "2.0.29"
quote = "1.0.33"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
fake = { version = "2.8", features = ["derive"] }
